<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >
    
	<!-- Tag List -->
	<ListView android:id="@+id/tag_list"
	    android:layout_width="fill_parent"
	    android:layout_height="0dp"
	    android:layout_weight="2"
	    android:background="@drawable/border"
	    android:padding="5dp"
	    android:transcriptMode="alwaysScroll" />
	
	<View android:layout_width="fill_parent" android:layout_height="5dp" />
	
	<!-- Inventory Options -->
	<TextView
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:paddingTop="5dp"
	    android:text="@string/inventory_options"
	    android:textStyle="bold"
	    android:textSize="16sp"
	    android:textColor="@color/label_color" />
	
	<ScrollView
	    android:layout_width="fill_parent"
	    android:layout_height="0dp"
	    android:layout_weight="1"
	    android:background="@drawable/border"
	    android:padding="5dp" >
	    
	    <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical" >
	
			<!-- Power Gain -->
			<LinearLayout
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:paddingTop="5dp"
			    android:orientation="horizontal" >
			    
			    <TextView
			        android:layout_width="0dp"
			        android:layout_height="wrap_content"
			        android:layout_weight="5"
			        android:layout_gravity="center_vertical"
			        android:text="@string/power_gain"
			        android:textColor="@color/label_color"
			        android:textSize="16sp" />
			    
			    <View android:layout_width="5dp" android:layout_height="40sp" />
			    
			    <Spinner android:id="@+id/power_gain"
			        android:layout_width="0dp"
			        android:layout_height="40sp"
			        android:layout_weight="7"
			        android:enabled="false" />
			    
			</LinearLayout>
			
		    <View android:layout_width="fill_parent" android:layout_height="1dp" android:background="@color/split_line_color" />
			
			<!-- Inventory Option -->
			<LinearLayout
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:paddingTop="5dp"
			    android:orientation="horizontal" >
		    
			    <!-- Display PC Value -->
			    <CheckBox android:id="@+id/display_pc"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:enabled="false"
			        android:textColor="@color/label_color"
			        android:text="@string/display_pc" />
				    
			    <View android:layout_width="10dp" android:layout_height="fill_parent" />
			    	    
			    <!-- Continue Mode -->
			    <CheckBox android:id="@+id/continue_mode"
			        android:layout_width="0dp"
			        android:layout_height="wrap_content"
			        android:layout_weight="1"
				    android:enabled="false"
			        android:textColor="@color/label_color"
			        android:text="@string/continuous_mode" />
			    	    
			</LinearLayout>

			<LinearLayout
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:orientation="horizontal" >
		    
			    <!-- Display RSSI Value -->
			    <CheckBox android:id="@+id/report_rssi"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:enabled="false"
			        android:textColor="@color/label_color"
			        android:text="@string/report_rssi" />
			    
			    <!-- Single Invnetory -->
			    <CheckBox android:id="@+id/singInventory"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:enabled="false"
			        android:textColor="@color/label_color"
			        android:text="@string/singe_inventory" 
			        android:visibility="gone" />
				    
			    <View android:layout_width="10dp" android:layout_height="fill_parent" />
			    	    
			</LinearLayout>

			<View android:layout_width="fill_parent" android:layout_height="1dp" android:background="@color/split_line_color" />
							        			
			<!-- Tag Type -->
			<LinearLayout
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:paddingTop="5dp"
			    android:orientation="horizontal" >
			    
			    <TextView
			        android:layout_width="0dp"
			        android:layout_height="wrap_content"
			        android:layout_gravity="center_vertical"
			        android:layout_weight="1"
			        android:text="@string/tag_type"
			        android:textColor="@color/label_color"
			        android:textSize="16sp" />
			    
			    <View android:layout_width="5dp" android:layout_height="40sp" />
			    			    
			    <Spinner android:id="@+id/tag_type"
			        android:layout_width="0dp"
			        android:layout_height="40sp"
			        android:layout_weight="2"
			        android:enabled="false" />
			    	    
			</LinearLayout>
				        	        
	    </LinearLayout>
	    
	</ScrollView>
	
	<View android:layout_width="fill_parent" android:layout_height="5dp" />
		
	<LinearLayout android:id="@+id/report_rssi_layout"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center_vertical"
	    android:orientation="horizontal" >
	    
	    <TextView
	        android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="5"
			android:text="@string/rssi_value"
			android:textColor="@color/label_color"
			android:textSize="16sp" />
		
		<View android:layout_width="5dp" android:layout_height="16sp" />
	    
	    <TextView android:id="@+id/rssi_value"
	        android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="7"
			android:textColor="@color/value_color"
			android:textSize="16sp"
			android:textStyle="bold" />
			    	    
	</LinearLayout>
	
	<View android:id="@+id/report_rssi_line" android:layout_width="fill_parent" android:layout_height="5dp" />
	
	<!-- Controls -->
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:baselineAligned="false"
	    android:orientation="horizontal" >
	    
	    <!-- Tag Count -->
	    <LinearLayout
	        android:layout_width="0dp"
	        android:layout_height="fill_parent"
	        android:layout_weight="1"
	        android:orientation="vertical" >
	        
	        <TextView 
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:gravity="center_vertical|center"
	            android:text="@string/tag_count"
	            android:textSize="20sp"
	            android:textColor="@color/label_color" />
	        
	        <TextView android:id="@+id/tag_count"
	            android:layout_width="fill_parent"
	            android:layout_height="fill_parent"
	            android:gravity="center_vertical|center"
	            android:background="@drawable/border"
	            android:textColor="@color/tag_count_color"
	            android:textSize="42sp"
	            android:textStyle="bold" />
	        
	    </LinearLayout>
	    	    	    
	    <!-- Buttons -->
	    <TableLayout
	        android:layout_width="0dp"
	        android:layout_height="fill_parent"
	        android:layout_weight="2.2" >
	        	      
	        <TableRow >
	            
	            <Button android:id="@+id/action"
	                android:layout_width="0dp"
	                android:layout_height="wrap_content"
	                android:layout_weight="1"
				    android:enabled="false"
	                android:textSize="18sp"
	                android:text="@string/action_inventory" />
	            
	        </TableRow>
	        
	        <TableRow >
	        	
	            <Button android:id="@+id/clear"
	                android:layout_width="0dp"
	                android:layout_height="wrap_content"
	                android:layout_weight="1"
				    android:enabled="false"
	                android:textSize="18sp"
	                android:text="@string/action_clear" />
	            
	            <Button android:id="@+id/mask"
	                android:layout_width="0dp"
	                android:layout_height="wrap_content"
	                android:layout_weight="1"
				    android:enabled="false"
	                android:textSize="18sp"
	                android:text="@string/action_mask" />
	            
	        </TableRow>
	        
	    </TableLayout>

	</LinearLayout>
	
</LinearLayout>
