<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >
    
	<!-- Tag List -->

	<ListView android:id="@+id/tag_list_Ex"
	    android:layout_width="fill_parent"
	    android:layout_height="0dp"
	    android:layout_weight="2"
	    android:background="@drawable/border"
	    android:padding="5dp"
	    android:transcriptMode="alwaysScroll" />
	
	<View android:layout_width="fill_parent" android:layout_height="5dp" />
	
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:baselineAligned="false"
	    android:orientation="horizontal" >
	
	    <TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:paddingTop="5dp"
		    android:text="@string/inventory_options"
		    android:textColor="@color/label_color"
		    android:textSize="16sp"
		    android:textStyle="bold" />
	
	    <View android:layout_width="10dp" android:layout_height="5dp" />
	
		<TextView
		    android:id="@+id/txtState"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:paddingTop="5dp"
		    android:textColor="@color/disconnected_device"
		    android:textSize="12sp"
		    android:textStyle="bold" />
	
	</LinearLayout>
	
	<!-- Inventory Options -->
	<ScrollView
	    android:layout_width="fill_parent"
	    android:layout_height="0dp"
	    android:layout_weight="1"
	    android:background="@drawable/border"
	    android:padding="5dp" >
	    
	    <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical" >
	
			<!-- Power Gain -->
			<LinearLayout
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:paddingTop="5dp"
			    android:orientation="horizontal" >
			    
			    <TextView
			        android:layout_width="0dp"
			        android:layout_height="wrap_content"
			        android:layout_weight="5"
			        android:layout_gravity="center_vertical"
			        android:text="@string/power_gain"
			        android:textColor="@color/label_color"
			        android:textSize="16sp" />
			    
			    <View android:layout_width="5dp" android:layout_height="40sp" />
			    
			    <Spinner android:id="@+id/power_gain_Ex"
			        android:layout_width="0dp"
			        android:layout_height="40sp"
			        android:layout_weight="7"
			        android:enabled="false" />
			    
			</LinearLayout>
			
		    <View android:layout_width="fill_parent" android:layout_height="1dp" android:background="@color/split_line_color" />
			
			<!-- Inventory Option -->
			<LinearLayout
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:paddingTop="5dp"
			    android:orientation="horizontal" 
			    android:visibility="gone">
		    
			    <!-- Display PC Value -->
			    <CheckBox android:id="@+id/display_pc_Ex"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:enabled="false"
			        android:textColor="@color/label_color"
			        android:text="@string/display_pc"/>
				    
			    <View android:layout_width="10dp" android:layout_height="fill_parent" />
			    	    
			    <!-- Continue Mode -->
			    <CheckBox android:id="@+id/continue_mode_Ex"
			        android:layout_width="0dp"
			        android:layout_height="wrap_content"
			        android:layout_weight="1"
				    android:enabled="false"
			        android:textColor="@color/label_color"
			        android:text="@string/continuous_mode" />
			    	    
			</LinearLayout>

			<LinearLayout
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:orientation="horizontal" >
		    
			    <!-- Display RSSI Value -->
			    <CheckBox android:id="@+id/report_rssi_Ex"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:enabled="false"
			        android:textColor="@color/label_color"
			        android:text="@string/report_rssi" 
			        android:visibility="gone"/>
				    
			    <View android:layout_width="10dp" android:layout_height="fill_parent" />
			    	    
			</LinearLayout>

			<View android:layout_width="fill_parent" android:layout_height="1dp" android:background="@color/split_line_color" />
							        			
			<!-- Tag Type -->
			<LinearLayout
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:paddingTop="5dp"
			    android:orientation="horizontal" >
			    
			    <TextView
			        android:layout_width="0dp"
			        android:layout_height="wrap_content"
			        android:layout_gravity="center_vertical"
			        android:layout_weight="1"
			        android:text="@string/tag_type"
			        android:textColor="@color/label_color"
			        android:textSize="16sp" />
			    
			    <View android:layout_width="5dp" android:layout_height="40sp" />
			    			    
			    <Spinner android:id="@+id/tag_type_Ex"
			        android:layout_width="0dp"
			        android:layout_height="40sp"
			        android:layout_weight="2"
			        android:enabled="false" />
			    	    
			</LinearLayout>
				       
			<View android:layout_width="fill_parent" android:layout_height="1dp" android:background="@color/split_line_color" />
				
			<!-- Bank -->
			<LinearLayout android:id="@+id/bank_layout"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:orientation="horizontal" >
			    
			    <TextView
			        android:layout_width="0dp"
			        android:layout_height="wrap_content"
			        android:layout_weight="1"
			        android:layout_gravity="center_vertical"
			        android:text="@string/bank"
			        android:textColor="@color/label_color"
			        android:textSize="16sp" />
			    
			    <View android:layout_width="5dp" android:layout_height="40sp" />
			    			    
			    <Spinner android:id="@+id/bank_Ex"
			        android:layout_width="0dp"
			        android:layout_height="40sp"
			        android:layout_weight="2" />
			    
			</LinearLayout>
			
			<View android:id="@+id/bank_line"
			    android:layout_width="fill_parent" 
			    android:layout_height="1dp" 
			    android:background="@color/split_line_color" />
			
			<!-- Offset -->
			<LinearLayout
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:orientation="horizontal" >
			    
			    <TextView
			        android:layout_width="0dp"
			        android:layout_height="wrap_content"
			        android:layout_weight="1"
			        android:layout_gravity="center_vertical"
			        android:text="@string/offset"
			        android:textColor="@color/label_color"
			        android:textSize="16sp" />
			    
			    <View android:layout_width="5dp" android:layout_height="40sp" />
			    			    
			    <Spinner android:id="@+id/offset_Ex"
			        android:layout_width="0dp"
			        android:layout_height="40sp"
			        android:layout_weight="2" />
			    
			</LinearLayout>
			
			<View android:layout_width="fill_parent" android:layout_height="1dp" android:background="@color/split_line_color" />
			
			<!-- Length -->
			<LinearLayout
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:orientation="horizontal" >
			    
			    <TextView
			        android:layout_width="0dp"
			        android:layout_height="wrap_content"
			        android:layout_weight="1"
			        android:layout_gravity="center_vertical"
			        android:text="@string/length"
			        android:textColor="@color/label_color"
			        android:textSize="16sp" />
			    
			    <View android:layout_width="5dp" android:layout_height="40sp" />
			    			    
			    <Spinner android:id="@+id/length_Ex"
			        android:layout_width="0dp"
			        android:layout_height="40sp"
			        android:layout_weight="2" />
			    
			</LinearLayout>
			
	    </LinearLayout>
	    
	</ScrollView>
	
	<View android:layout_width="fill_parent" android:layout_height="5dp" />
		
	<!-- Controls -->
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:baselineAligned="false"
	    android:orientation="horizontal" >
	    
	    <!-- Tag Count -->
	    <LinearLayout
	        android:layout_width="0dp"
	        android:layout_height="fill_parent"
	        android:layout_weight="1"
	        android:orientation="vertical" >
	        
	        <TextView 
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:gravity="center_vertical|center"
	            android:text="@string/tag_count"
	            android:textSize="20sp"
	            android:textColor="@color/label_color" />
	        
	        <TextView android:id="@+id/tag_count_Ex"
	            android:layout_width="fill_parent"
	            android:layout_height="fill_parent"
	            android:gravity="center_vertical|center"
	            android:background="@drawable/border"
	            android:textColor="@color/tag_count_color"
	            android:textSize="42sp"
	            android:textStyle="bold" />
	        
	    </LinearLayout>
	    	    	    
	    <!-- Buttons -->
	    <TableLayout
	        android:layout_width="0dp"
	        android:layout_height="fill_parent"
	        android:layout_weight="2.2" >
	        	      
	        <TableRow >
	            
	            <Button android:id="@+id/action_Ex"
	                android:layout_width="0dp"
	                android:layout_height="wrap_content"
	                android:layout_weight="1"
				    android:enabled="false"
	                android:textSize="18sp"
	                android:text="@string/action_inventory" />
	            
	        </TableRow>
	        
	        <TableRow >
	        	
	            <Button android:id="@+id/clear_Ex"
	                android:layout_width="0dp"
	                android:layout_height="wrap_content"
	                android:layout_weight="1"
				    android:enabled="false"
	                android:textSize="18sp"
	                android:text="@string/action_clear" />
	            
	            <Button android:id="@+id/mask_Ex"
	                android:layout_width="0dp"
	                android:layout_height="wrap_content"
	                android:layout_weight="1"
				    android:enabled="false"
	                android:textSize="18sp"
	                android:text="@string/action_mask" 
	                android:visibility="gone"/>
	            
	        </TableRow>
	        
	    </TableLayout>

	</LinearLayout>
	
</LinearLayout>
